--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
